test/should_not_compile/syntax_datbind.sml
datatype t = T1
     and t = T2;
